--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,83 @@
 * {
+    font-family: 'Oswald', sans-serif;
+    background-color: #444D51;
+}
 
+h1 {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 72px;
+    color: #CEAA4A;
+    margin-top: 0;
+}
+
+h3 {
+    color: #FFF;
+    margin-bottom: 0;
+    text-align: left;
+    padding-left: 8px;
+}
+
+#navmenu ul li {
+    list-style: none outside none;
+    display: inline-block;
+    color: #fff
+}
+
+#navmenu a {
+    color:  #FFF;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+#navmenu a:hover {
+    color: #CEAA4A;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+.social {
+	margin: 0;
+	padding: 0;
+	text-align: right;
+}
+
+.social ul {
+	margin: 0;
+	padding: 5px;
+}
+
+.social ul li {
+	margin: 5px;
+	list-style: none outside none;
+	display:inline-block;
+}
+
+.social i {
+    width: 30px;
+    height: 35px;
+    color: #212023;
+    font-size: 22px;
+    text-align:center;
+    padding-top: 12px;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
+}
+
+.social i:hover {
+    color: #CEAA4A;
+    text-decoration: none;
+    transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -webkit-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    -ms-transition: all ease 0.3s;
 }
