--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,7 @@ h3 {
 
 #navmenu ul li {
     list-style: none outside none;
-    display: inline-block;
+    display: block;
     color: #fff
 }
 
